# invariant-robotics

./: .gitignore  Cargo.toml  README.md  deny.toml  spec.md
.codelicious/: STATE.md
.github/workflows/: ci.yml  release.yml
campaigns/: cnc_tending_1m.yaml  stress_test_10m.yaml
crates/invariant-cli/: Cargo.toml
crates/invariant-cli/src/: key_file.rs  main.rs
crates/invariant-cli/src/commands/: audit.rs  campaign.rs  eval.rs  inspect.rs  keygen.rs  serve.rs  validate.rs  verify.rs
crates/invariant-cli/tests/: adversarial_test.rs  integration_test.rs  ur10e_urdf_test.rs
crates/invariant-coordinator/src/: lib.rs  monitor.rs
crates/invariant-core/: Cargo.toml
crates/invariant-core/profiles/: agility_digit.json  figure_02.json  hello_stretch.json  leap_hand.json  pal_tiago.json  psyonic_ability.json  quadruped_12dof.json  sanctuary_phoenix.json  shadow_hand.json  tesla_optimus.json  ur10.json  ur10e_haas_cell.json
crates/invariant-core/src/: actuator.rs  audit.rs  keys.rs  lib.rs  profiles.rs  validator.rs  watchdog.rs
crates/invariant-core/src/authority/: chain.rs  crypto.rs  operations.rs  tests.rs
crates/invariant-core/src/models/: authority.rs  error.rs  profile.rs
crates/invariant-core/src/physics/: acceleration.rs  delta_time.rs  exclusion_zones.rs  joint_limits.rs  mod.rs  proximity.rs  self_collision.rs  stability.rs  tests.rs  torque.rs  velocity.rs  workspace.rs
crates/invariant-eval/: Cargo.toml
crates/invariant-eval/src/: differ.rs  presets.rs
crates/invariant-fuzz/src/system/: network.rs
crates/invariant-sim/: Cargo.toml  invariant_isaac_bridge.py
crates/invariant-sim/src/: campaign.rs  episode.rs  lib.rs  reporter.rs  scenario.rs
crates/invariant-sim/src/isaac/: bridge.rs  dry_run.rs
docs/: runpod-simulation-guide.md  spec-15m-campaign.md  spec-gaps.md  spec-v1.md  spec-v10.md  spec-v11.md  spec-v12.md  spec-v4.md  spec-v5.md  spec-v6.md  spec-v7.md  spec-v8.md  spec-v9.md  spec.md
isaac/envs/: __init__.py  cell_config.py  dexterous_manipulation.py
isaac/tests/: test_dexterous_manipulation.py
profiles/: allegro_hand.json  anybotics_anymal.json  apptronik_apollo.json  bd_atlas.json  fourier_gr1.json  franka_panda.json  humanoid_28dof.json  leap_hand.json  onex_neo.json  spot_with_arm.json  unitree_a1.json  unitree_g1.json  unitree_go2.json  unitree_h1.json  ur10e.urdf
