[workspace]
members = [
    "crates/invariant-core",
    "crates/invariant-cli",
    "crates/invariant-sim",
    "crates/invariant-eval",
    "crates/invariant-fuzz",
    "crates/invariant-coordinator",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/clay-good/invariant"
homepage = "https://github.com/clay-good/invariant"
documentation = "https://docs.rs/invariant-robotics-core"
keywords = ["robotics", "safety", "cryptography", "ed25519", "real-time"]
categories = ["aerospace", "cryptography", "embedded", "science", "simulation"]

[workspace.dependencies]
# Core crypto + serialization
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
coset = "0.3"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.9"
thiserror = "2.0"
# CLI
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0" }
axum = "0.8"
# Sim + eval
serde_yaml = "0.9"
regex = "1.11"
# URDF parsing (forward kinematics)
quick-xml = "0.37"
