[package]
name = "invariant-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Invariant."

[[bin]]
name = "invariant"
path = "src/main.rs"

[dependencies]
invariant-core = { path = "../invariant-core" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Minimal tokio feature set: rt-multi-thread + macros for serve mode (P2-14).
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
chrono.workspace = true
axum.workspace = true

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
