[package]
name = "invariant-robotics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Invariant."
readme = "../../README.md"

[lib]
name = "invariant_robotics"
path = "src/lib.rs"

[[bin]]
name = "invariant"
path = "src/main.rs"

[dependencies]
invariant-core = { package = "invariant-robotics-core", path = "../invariant-core", version = "0.0.3" }
invariant-eval = { package = "invariant-robotics-eval", path = "../invariant-eval", version = "0.0.3" }
invariant-fuzz = { package = "invariant-robotics-fuzz", path = "../invariant-fuzz", version = "0.0.3" }
invariant-sim = { package = "invariant-robotics-sim", path = "../invariant-sim", version = "0.0.3" }
clap.workspace = true
clap_complete = "4.6"
tracing.workspace = true
tracing-subscriber.workspace = true
# Minimal tokio feature set: rt-multi-thread + macros for serve mode (P2-14).
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
chrono.workspace = true
axum.workspace = true
tower = { version = "0.5", features = ["timeout", "util", "limit"] }

[dev-dependencies]
tempfile = "3"
