[package]
name = "invariant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, physics checks, authority validation, and cryptography for Invariant."

[dependencies]
ed25519-dalek.workspace = true
coset.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
