[package]
name = "invariant-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trace evaluation engine for Invariant (presets, rubrics, guardrails, differ)."

[dependencies]
invariant-core = { path = "../invariant-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
