[package]
name = "invariant-robotics-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Simulation harness for Invariant (Isaac Lab integration and dry-run campaigns)."
readme = "../../README.md"

[dependencies]
invariant-core = { package = "invariant-robotics-core", path = "../invariant-core", version = "0.0.3" }
# Unix socket + async I/O for Isaac Lab IPC bridge; no HTTP client needed (P2-13).
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
rand.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
chrono.workspace = true
tracing.workspace = true
